--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.1.1"
     implementation "org.jetbrains.anko:anko-commons:0.10.4"
-
+    implementation "org.jetbrains.anko:anko-sqlite:0.10.4"
 
 }
