--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".Register">
+        <activity
+                android:name=".Register"
+                android:parentActivityName=".LoginActivity">
+        >
         </activity>
         <activity android:name=".LoginActivity">
         </activity>
